// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarItem render non-highlighted SideBarItem 1`] = `
<MenuItem
  className="sidebar-item null"
>
  <div
    className="sidebar-item-align"
  >
    <span>
      <Icon
        as="i"
        name="fire"
        size="large"
      />
    </span>
    <span>
      Trending
    </span>
  </div>
</MenuItem>
`;

exports[`SidebarItem renders empty SidebarItem without path 1`] = `
<MenuItem
  className="sidebar-item null"
>
  <div
    className="sidebar-item-align"
  >
    <span>
      <Icon
        as="i"
        size="large"
      />
    </span>
    <span />
  </div>
</MenuItem>
`;

exports[`SidebarItem renders highlighted SideBarItem 1`] = `
<MenuItem
  className="sidebar-item null"
>
  <div
    className="sidebar-item-align"
  >
    <span>
      <Icon
        as="i"
        name="fire"
        size="large"
      />
    </span>
    <span>
      Trending
    </span>
  </div>
</MenuItem>
`;
